Fixed header CSS not stretching to window width

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,7 +65,7 @@ input {
   text-indent: 10px;
   border: none;
   border-radius: 8px;
-  color: #272522;
+  color: white;
 }
 
 button {
@@ -94,11 +94,6 @@ button {
   display: flex;
   flex-direction: column;
   gap: 40px;
-}
-
-.container {
-  width: 800px;
-  margin: 0 auto;
 }
 
 @media (max-width: 640px) {
